rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest
  labels:
    app: rest
spec:
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: rest
